# hboard

./: .gitignore  README.md  board.py  counter.py  hboard.cabal  hboard.py  parsepost.py  readme.md  storage.py
res/: 404.html  index.html  topposts.json  view.html
res/css/: board.css  term.css
res/js/: iterator.js  render.js  template.js  term.js
res/jtm/: post.html  reply.html  term.html  termentry.html
src/: BoardApp.hs  Main.hs
static/: board.css  boardview.html  index.html  prepros.cfg  threadview.html
static/css/: main.css  main.css.map  main.min.css  main.sass
static/css/modules/: _colors.sass  _utility.sass
static/css/partials/: _base.sass  _footer.sass  _forms.sass  _menus.sass  _postview.css  _postview.sass  _replies.sass  _reset.sass  _search.sass
static/js/: .subl2db.tmp  BarBarBar.js  BarBarBar.min.js  jquery-ui.min.js  scripts.js  scripts.min.js
templates/: boardview.html  index.html  layout.html  postview.html
