Name:                hboard
Version:             0.0.1
Synopsis:            JC makes noises.
Description:         An image-board web server.
License:             AllRightsReserved
Author:              Nulldata
Maintainer:          thebreadcat@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable hboard
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    safecopy                  >= 0.8.2,
    containers                >= 0.5,
    lens                      >= 4.1.2,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    snaplet-acid-state        >= 0.2.6.1,
    snap                      >= 0.13.2.4,
    acid-state                >= 0.12.1,
    directory                 >= 1.2.0.1,
    uid                       >= 0.1.0.1,
    split                     >= 0.2.2

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
